# OpenSentry

./: .dockerignore  .gitignore  CHANGELOG.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  LICENSE  README.md  compose.yaml  config.json  docker-compose.yml  pyproject.toml  server.py  server.py.bak
.github/workflows/: ci.yml
archives/known_faces/: manifest_embeddings.json
docs/: IMPLEMENTATION_SUMMARY.md  QUICKSTART_PI_ZERO_W.md  SNAPSHOT_MODE.md  compose-snapshot.yaml.example  config.json.example  test_snapshot_mode.sh
helpers/: __init__.py  all_feeds_page.py  camera.py  config.py  encoders.py  face_dedup.py  faces.py  frame_hub.py  gstreamer_hls.py  index_page.py  mdns.py  motion.py  settings_page.py  snapshot_page.py  theme.py  yolo.py
tests/: test_smoke.py  test_status.py
