[project]
name = "opensentry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "opencv-python>=4.12.0.88",
    "ultralytics>=8.3.204",
    "zeroconf>=0.148.0",
    "gunicorn>=22.0.0",
    "gevent>=24.2.1",
    "requests>=2.31.0",
    "pyturbojpeg>=1.8.2",
]
